ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alb-ingress-rules
  namespace: monitoring
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: "alb-ingress"
    alb.ingress.kubernetes.io/rewrite-target: /
    alb.ingress.kubernetes.io/ip-address-type: ipv4
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '15'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '8'
    alb.ingress.kubernetes.io/healthy-threshold-count: '5'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '5'
    alb.ingress.kubernetes.io/success-codes: '200'
spec:
  ingressClassName: ingres-class
  rules:
    - http:
         paths:
          - path: /prometheus
            pathType: Prefix
            backend:
              service:
                name: prometheus-operated  # Change this to your Prometheus service name
                port:
                  number: 9090
          - path: /
            pathType: Prefix
            backend:
              service:
                name: alertmanager-operated  # Change this to your Prometheus service name
                port:
                  number: 9093
          - path: /grafana/
            pathType: Prefix
            backend:
              service:
                name: monitoring-grafana
                port:
                  number: 80
