ingress_kube_prom_stack.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubernetes-prometheus-stack
  namespace: monitoring
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /prometheus
            pathType: Prefix
            backend:
              service:
                name: prometheus-operated  # Change this to your Prometheus service name
                port:
                  number: 9090
          - path: /grafana
            pathType: Prefix
            backend:
              service:
                name: monitoring-grafana  # Change this to your Grafana service name
                port:
                  number: 80
          - path: /alertmanager
            pathType: Prefix
            backend:
              service:
                name: alertmanager-operated  # Change this to your Alertmanager service name
                port:
                  number: 9093
